# cheapchatcontext

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  ccc-config.toml  ccc.config.example.json  ccc.config.json  installer.iss  run.bat
devdocs/: README.md
docs/: Compiling in Windows.md  README.md  secret.md
src/: CMakeLists.txt  Clipboard.h  Clipboard_Linux.cpp  Clipboard_Windows.cpp  Config.cpp  Config.h  DirectoryScanner.cpp  DirectoryScanner.h  FileFilter.cpp  FileFilter.h  FileReader.cpp  FileReader.h  FileUtils.cpp  FileUtils.h  FileWriter.cpp  FileWriter.h  GitFiles.cpp  GitFiles.h  GitIgnore.cpp  GitIgnore.h  MarkdownBuilder.cpp  MarkdownBuilder.h  PathResolver.cpp  PathResolver.h  ProjectScanner.cpp  ProjectScanner.h  TreeRenderer.cpp  TreeRenderer.h  main.cpp
tests/: CMakeLists.txt  FileFilterTests.cpp  ProjectScannerTests.cpp
